<resources>
    <string name="app_name">GPS Emergencia</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_activity__configuracoes_gerais">Activity_ConfiguracoesGerais</string>
    <string name="title_activity_activity__descricao_hospital">Activity_DescricaoHospital</string>
    <string name="title_activity_activity__historico">Activity_Historico</string>
    <string name="title_activity_activity__hospitais">Activity_Hospitais</string>

    <string name="lb_ACaminhodoHospital">A Caminho do Hospital</string>
    <string name="lb_ACaminhodoLocaldeSocorro">A Caminho do Local de Socorro</string>
    <string name="lb_ActualizarManualmente">Actualizar Manualmente</string>
    <string name="lb_AdicionadocomSucesso">Adicionado com Sucesso</string>
    <string name="lb_AdicionarNovoHospital">Adicionar Novo Hospital</string>
    <string name="lb_ApagadocomSucesso">Apagado com Sucesso</string>
    <string name="lb_Atualizar">Atualizar</string>
    <string name="lb_btremoverHospital">Remover Hospital</string>
    <string name="lb_CancelarOcurrencia">Cancelar Ocurrencia</string>
    <string name="lb_ChegadaaoHospital">Chegada ao Hospital</string>
    <string name="lb_ChegadaaoLocal">Chegada ao Local</string>
    <string name="lb_ConfiguracoesdeHospitais">Configurações de Hospitais</string>
    <string name="lb_ConfiguracoesGerais">Configurações Gerais</string>
    <string name="lb_ConfiguracoesGuardadascomSucesso">Configurações Guardadas com Sucesso</string>
    <string name="lb_Coordenadas">Coordenadas</string>
    <string name="lb_DateeHora">Data e Hora</string>
    <string name="lb_DescricaodaOcurrencia">Descrição da Ocurrencia</string>
    <string name="lb_Erro">Erro</string>
    <string name="lb_FaltaAlgumaInformaçao">Falta Alguma Informação</string>
    <string name="lb_Finalizar">Finalizar</string>
    <string name="lb_Historico">Historico</string>
    <string name="lb_IniciarOcurrencia">Iniciar Ocurrencia</string>
    <string name="lb_IniciodaOcurrencia">Inicio da Ocurrencia</string>
    <string name="lb_Lat">Lat</string>
    <string name="lb_Latitude">Latitude</string>
    <string name="lb_Local">Local</string>
    <string name="lb_Lon">Lon</string>
    <string name="lb_Longitude">Longitude</string>
    <string name="lb_Nao">Não</string>
    <string name="lb_NaoEstaNumaOcurrencia">Não Esta Numa Ocurrencia</string>
    <string name="lb_NoHospital">No Hospital</string>
    <string name="lb_NoLocaldeSocorro">No Local de Socorro</string>
    <string name="lb_Nome">Nome</string>
    <string name="lb_Nomejaexiste">Nome já existe</string>
    <string name="lb_OK">OK</string>
    <string name="lb_ParadonoHospital">Tempo Parado no Hospital (min)</string>
    <string name="lb_PosicaoActual">Posição Actual</string>
    <string name="lb_RaiodeDistanciadoHospital">Raio de Distancia do Hospital (metros)</string>
    <string name="lb_RaiodeDistanciadoLocal">Raio de Distancia no Local (metros)</string>
    <string name="lb_SaidadoHospital">Saida do Hospital</string>
    <string name="lb_SaidadoLocal">Saida do Local</string>
    <string name="lb_Sim">Sim</string>
    <string name="lb_Submeter">Submeter</string>
    <string name="lb_TemacertezaquepretendeApagar">Tem a certeza que pretende Apagar?</string>
    <string name="lb_TempoParadonoLocal">Tempo Parado no Local (min)</string>
    <string name="lb_VerDadosdaOcurrenciaActiva">Ver Dados da Ocurrencia Activa</string>
    <string name="lb_JaExisteUmaOcurrenciaaDecorrer">Ja Existe Uma Ocurrencia a Decorrer</string>
    <string name="lb_NaoExisteUmaOcurrenciaaDecorrer">Nao Existe Uma Ocurrencia a Decorrer</string>
    <string name="lb_FimdaOcurrencia">Fim da Ocurrencia</string>
    <string name="lb_Guardar">Guardar</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
