<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.td1026.gpsemergencia.Activity_ConfiguracoesGerais"
    tools:showIn="@layout/activity_activity__configuracoes_gerais">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lb_TempoParadonoLocal"
            android:id="@+id/cg_lb_TempoLocal"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/cg_et_TempoLocal"
            android:gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lb_ParadonoHospital"
            android:id="@+id/cg_lb_TempoHospital"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/cg_et_TempoHospital"
            android:gravity="center"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lb_RaiodeDistanciadoLocal"
            android:id="@+id/cb_lb_RaioLocal"
            android:textAlignment="center"

            android:textSize="20sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/cg_et_RaioLocal"
            android:gravity="center"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lb_RaiodeDistanciadoHospital"
            android:id="@+id/cg_lb_RaioHospital"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textIsSelectable="true"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/cg_et_RaioHospital"
            android:gravity="center"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lb_Local"
            android:id="@+id/cg_lb_Local"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textIsSelectable="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/cg_et_Local"
            android:gravity="center"
            android:inputType="text" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lb_Submeter"
            android:id="@+id/cg_bt_Submeter" />
    </LinearLayout>
</RelativeLayout>
